--- a/WindowsFormsApplication4/Settings1.settings
+++ b/WindowsFormsApplication4/Settings1.settings
@@ -41,5 +41,11 @@
     <Setting Name="DbFilePath" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="FukusuRiyou" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
+    <Setting Name="KojinRiyou" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
