--- a/WindowsFormsApplication4/Settings1.settings
+++ b/WindowsFormsApplication4/Settings1.settings
@@ -47,5 +47,8 @@
     <Setting Name="KojinRiyou" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="SqliteDbPath" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
