--- a/WindowsFormsApplication4/App.config
+++ b/WindowsFormsApplication4/App.config
@@ -46,13 +46,13 @@
         <value>999</value>
       </setting>
       <setting name="Pascal" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="Camel" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="Snake" serializeAs="String">
-        <value>False</value>
+        <value>True</value>
       </setting>
       <setting name="DispNumber" serializeAs="String">
         <value>0</value>
