--- a/WindowsFormsApplication4/Settings1.settings
+++ b/WindowsFormsApplication4/Settings1.settings
@@ -6,13 +6,13 @@
       <Value Profile="(Default)">999</Value>
     </Setting>
     <Setting Name="Pascal" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Camel" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="Snake" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="DispNumber" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
