--- a/WindowsFormsApplication4/packages.config
+++ b/WindowsFormsApplication4/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.ja" version="6.1.3" targetFramework="net45" />
   <package id="Npgsql" version="2.2.5" targetFramework="net45" />
   <package id="Npgsql.EntityFramework" version="2.2.5" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.98.1" targetFramework="net45" />
