--- a/WindowsFormsApplication4/App.config
+++ b/WindowsFormsApplication4/App.config
@@ -24,7 +24,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="MyContext" connectionString="Server=localhost; Port=5433; User Id=postgres;Password=postgres;Database=WordConverter" providerName="Npgsql" />
+    <add name="MyContextPostgres" connectionString="Server=localhost; Port=5433; User Id=postgres;Password=postgres;Database=WordConverter" providerName="Npgsql" />
     <add name="MyContextSqlite" connectionString="Data Source=C:\単語ツール\WordConverter_v2\WindowsFormsApplication4\bin\Debug\WordConverter_v2.db;foreign keys=true;" providerName="System.Data.SQLite.EF6" />
   </connectionStrings>
   <system.data>
@@ -33,6 +33,6 @@
       <add name="Npgsql Data Provider" invariant="Npgsql" support="FF" description=".Net Framework Data Provider for Postgresql" type="Npgsql.NpgsqlFactory, Npgsql" />
       <remove invariant="System.Data.SQLite.EF6" />
       <add name="SQLite Data Provider" invariant="System.Data.SQLite.EF6" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
-      </DbProviderFactories>
+    </DbProviderFactories>
   </system.data>
 </configuration>
