--- a/WindowsFormsApplication4/App.config
+++ b/WindowsFormsApplication4/App.config
@@ -35,4 +35,50 @@
       <add name="SQLite Data Provider" invariant="System.Data.SQLite.EF6" description=".Net Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
     </DbProviderFactories>
   </system.data>
+  <userSettings>
+    <WordConverter_v2.Settings1>
+      <setting name="UserId" serializeAs="String">
+        <value>999</value>
+      </setting>
+      <setting name="Pascal" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Camel" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="Snake" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="DispNumber" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="HotKey" serializeAs="String">
+        <value>Ctrl + Q</value>
+      </setting>
+      <setting name="ServerName" serializeAs="String">
+        <value>localhost</value>
+      </setting>
+      <setting name="DbName" serializeAs="String">
+        <value>postgres</value>
+      </setting>
+      <setting name="DbUserId" serializeAs="String">
+        <value>postgres</value>
+      </setting>
+      <setting name="DbPassword" serializeAs="String">
+        <value>postgres</value>
+      </setting>
+      <setting name="DbPortNo" serializeAs="String">
+        <value>5432</value>
+      </setting>
+      <setting name="FukusuRiyou" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="KojinRiyou" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="SqliteContextString" serializeAs="String">
+        <value />
+      </setting>
+    </WordConverter_v2.Settings1>
+  </userSettings>
 </configuration>
